--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/gsap/dist/gsap.min.js"
+            ]
           },
           "configurations": {
             "production": {
