--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "angular-notifier": "^14.0.0",
     "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.3",
+    "chartjs": "^0.3.24",
     "gsap": "^3.12.5",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
