footer and patterns

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chartjs": "^0.3.24",
     "gsap": "^3.12.5",
     "ngx-toastr": "^19.0.0",
+    "postcss-nested": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
