--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "angular-notifier": "^14.0.0",
     "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
